Clean up header and auth modal, standardize footers
- Removed wishlist counter from header (cleaner look)
- Removed My Account button from header (login redirects to dashboard)
- Made auth modal more compact (smaller width, padding, fonts)
- Changed auth modal text: 'Welcome' header, 'Login/Register' tabs
- Removed 'Write a Review' button (reviews from order history only)
- Standardized footers across all pages with Size Guide link
- Added WhatsApp widget to all pages
- Updated auth.js to remove userMenuBtn references

--- a/dashboard.html
+++ b/dashboard.html
@@ -57,18 +57,12 @@
             <i class="fa-solid fa-user"></i>
           </button>
           <a
-            href="dashboard.html"
+            href="wishlist.html"
             class="header-btn"
-            id="userMenuBtn"
-            aria-label="My Account"
-            title="My Account"
-            hidden
+            aria-label="Wishlist"
+            title="Wishlist"
           >
-            <i class="fa-solid fa-user-check"></i>
-          </a>
-          <a href="wishlist.html" class="header-btn" aria-label="Wishlist">
             <i class="fa-solid fa-heart"></i>
-            <span class="wishlist-count" id="wishlistCount">0</span>
           </a>
           <button
             type="button"
@@ -491,15 +485,15 @@
         </button>
 
         <div class="auth-brand">
-          <h1 class="brand-logo"><i class="fa-solid fa-heart"></i> LBS</h1>
+          <h1 class="brand-logo"><i class="fa-solid fa-heart"></i> Welcome</h1>
         </div>
 
         <div class="auth-tabs" id="authTabs">
           <button type="button" class="tab-btn active" data-tab="login">
-            Sign In
+            Login
           </button>
           <button type="button" class="tab-btn" data-tab="signup">
-            Sign Up
+            Register
           </button>
         </div>
 
