--- a/index.html
+++ b/index.html
@@ -145,18 +145,12 @@
             <i class="fa-solid fa-user"></i>
           </button>
           <a
-            href="dashboard.html"
+            href="wishlist.html"
             class="header-btn"
-            id="userMenuBtn"
-            aria-label="My Account"
-            title="My Account"
-            hidden
+            aria-label="Wishlist"
+            title="Wishlist"
           >
-            <i class="fa-solid fa-user-check"></i>
-          </a>
-          <a href="wishlist.html" class="header-btn" aria-label="Wishlist">
             <i class="fa-solid fa-heart"></i>
-            <span class="wishlist-count" id="wishlistCount"></span>
           </a>
           <button
             type="button"
@@ -391,13 +385,7 @@
           <p>Be the first to share your experience!</p>
         </div>
 
-        <!-- Add Review Button -->
-        <div class="testimonials-cta">
-          <button type="button" class="btn btn-primary" id="openReviewModal">
-            <i class="fa-solid fa-pen"></i>
-            <span>Write a Review</span>
-          </button>
-        </div>
+        <!-- Reviews can be submitted from order history in dashboard -->
       </div>
     </section>
 
@@ -778,15 +766,15 @@
         </button>
 
         <div class="auth-brand">
-          <h1 class="brand-logo"><i class="fa-solid fa-heart"></i> LBS</h1>
+          <h1 class="brand-logo"><i class="fa-solid fa-heart"></i> Welcome</h1>
         </div>
 
         <div class="auth-tabs" id="authTabs">
           <button type="button" class="tab-btn active" data-tab="login">
-            Sign In
+            Login
           </button>
           <button type="button" class="tab-btn" data-tab="signup">
-            Sign Up
+            Register
           </button>
         </div>
 
