--- a/wishlist.html
+++ b/wishlist.html
@@ -64,22 +64,12 @@
             <i class="fa-solid fa-user"></i>
           </button>
           <a
-            href="dashboard.html"
-            class="header-btn"
-            id="userMenuBtn"
-            aria-label="My Account"
-            title="My Account"
-            hidden
-          >
-            <i class="fa-solid fa-user-check"></i>
-          </a>
-          <a
             href="wishlist.html"
             class="header-btn active"
             aria-label="Wishlist"
+            title="Wishlist"
           >
             <i class="fa-solid fa-heart"></i>
-            <span class="wishlist-count" id="wishlistCount">0</span>
           </a>
           <a
             href="cart.html"
@@ -390,15 +380,15 @@
         </button>
 
         <div class="auth-brand">
-          <h1 class="brand-logo"><i class="fa-solid fa-heart"></i> LBS</h1>
+          <h1 class="brand-logo"><i class="fa-solid fa-heart"></i> Welcome</h1>
         </div>
 
         <div class="auth-tabs" id="authTabs">
           <button type="button" class="tab-btn active" data-tab="login">
-            Sign In
+            Login
           </button>
           <button type="button" class="tab-btn" data-tab="signup">
-            Sign Up
+            Register
           </button>
         </div>
 
